# jobagent0

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
JobAgentWorkspace/: resume.json
JobAgentWorkspace/jobs/Co-op-Software-Engineer-Build-Next-Gen-SaaS-Clio/: cover_letter.tex  job.json  resume.tex
JobAgentWorkspace/jobs/Digital-AI-Intern-January-April-2026-Arup/: job.json
JobAgentWorkspace/jobs/Generative-AI-Developer-CGI/: cover_letter.tex  job.json  resume.tex
JobAgentWorkspace/jobs/Junior-Full-Stack-Developer-Part-time-Student-Only-Stellari/: cover_letter.tex  job.json  resume.tex
JobAgentWorkspace/jobs/Marketing-Front-End-AI-Co-op-Spring-2026-Revvity/: cover_letter.tex  job.json  resume.tex
JobAgentWorkspace/jobs/Software-Developer-Applied-AI-MNP/: cover_letter.tex  job.json  resume.tex
JobAgentWorkspace/jobs/Software-Development-Engineer-Internship-Summer-2026-Canada-Amazon/: job.json
JobAgentWorkspace/jobs/Software-Development-Engineer-Internship-Summer-2026-Canada-Amazon-1/: cover_letter.tex  job.json  resume.tex
backend/: __init__.py  main.py
backend/api/: routes.py
backend/config/: __init__.py  prompts.py
backend/models/: __init__.py  generation.py  job.py  resume.py
backend/services/: __init__.py  gemini_service.py  latex_generator.py  pdf_compiler.py  pdf_parser.py
backend/template/: template1.tex
backend/utils/: workspace.py
frontend/: background.js  content.js  help.md  manifest.json  popup.css  popup.html  popup.js
frontend/icons/: README.txt
